sockshop-infrastructure/manifests/carts-db.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: carts-db
    namespace: dev
    labels:
      name: carts-db
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: carts-db
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          name: carts-db
      spec:
        containers:
        - image: mongo
          name: carts-db
          ports:
          - containerPort: 27017
          resources: {}
          volumeMounts:
          - mountPath: /data/db
            name: carts-db-mongodata
        restartPolicy: Always
        volumes:
        - name: carts-db-mongodata
          persistentVolumeClaim:
            claimName: carts-db-mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  namespace: dev
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    name: carts-db
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: carts-db
    namespace: staging
    labels:
      name: carts-db
  spec:
    replicas: 1
    selector:
      matchLabels:
        name: carts-db
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          name: carts-db
      spec:
        containers:
        - image: mongo
          name: carts-db
          ports:
          - containerPort: 27017
          resources: {}
          volumeMounts:
          - mountPath: /data/db
            name: carts-db-mongodata
        restartPolicy: Always
        volumes:
        - name: carts-db-mongodata
          persistentVolumeClaim:
            claimName: carts-db-mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  namespace: staging
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    name: carts-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-db
  namespace: prod
  labels:
    name: carts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: carts-db
    spec:
      containers:
      - image: mongo
        name: carts-db
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: carts-db-mongodata
      restartPolicy: Always
      volumes:
      - name: carts-db-mongodata
        persistentVolumeClaim:
          claimName: carts-db-mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  namespace: prod
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    name: carts-db
