sockshop-infrastructure/manifests/orders-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  namespace: dev
  labels:
    name: orders-db
    part-of: sockshop
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: orders-db
  template:
    metadata:
      labels:
        name: orders-db
        part-of: sockshop
    spec:
      containers:
      - image: mongo:4.4
        name: orders-db
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: orders-db-mongodata
      restartPolicy: Always
      volumes:
      - name: orders-db-mongodata
        persistentVolumeClaim:
          claimName: orders-db-mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: dev
  labels:
    part-of: sockshop
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    name: orders-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  namespace: staging
  labels:
    name: orders-db
    part-of: sockshop
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: orders-db
  template:
    metadata:
      labels:
        name: orders-db
        part-of: sockshop
    spec:
      containers:
      - image: mongo:4.4
        name: orders-db
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: orders-db-mongodata
      restartPolicy: Always
      volumes:
      - name: orders-db-mongodata
        persistentVolumeClaim:
          claimName: orders-db-mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: staging
  labels:
    part-of: sockshop
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    name: orders-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
  namespace: prod
  labels:
    name: orders-db
    part-of: sockshop
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: orders-db
  template:
    metadata:
      labels:
        name: orders-db
        part-of: sockshop
    spec:
      containers:
      - image: mongo:4.4
        name: orders-db
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: orders-db-mongodata
      restartPolicy: Always
      volumes:
      - name: orders-db-mongodata
        persistentVolumeClaim:
          claimName: orders-db-mongodata
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: prod
  labels:
    part-of: sockshop
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    name: orders-db
